overflow-x - issue solved 2

--- a/css/menu.css
+++ b/css/menu.css
@@ -9,6 +9,8 @@ body {
     /*overflow: hidden;*/
 }
 html{
+    position: relative;
+    z-index: 2;
     overflow-x: hidden;
 }
 
